--- a/ERP/Core.Erp.Web/Areas/Produccion/Views/Fabricacion/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Produccion/Views/Fabricacion/Nuevo.cshtml
@@ -12,7 +12,7 @@
 @using (Html.BeginForm("Nuevo", "Fabricacion", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa, new { @id="IdEmpresa"})
-    @Html.HiddenFor(q => q.IdFabricacion)
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
     <div class="row">
         <div class="col-md-3">
@@ -118,10 +118,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <div class="form-group">
-                        <label for=""> </label>
-                        <button type="button" class="btn btn-primary form-control" onclick="BuscarFacturas();">Productos facturados</button>
+                        <label for=""></label>
+                        <button type="button" class="btn btn-primary form-control" >Productos facturados</button>
                     </div>
                 </div>
             </div>
@@ -145,7 +145,8 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    @Html.Action("GridViewPartial_fabricacion_det")
+                    <label for="">Producto terminado</label>
+                        @Html.Action("GridViewPartial_fabricacion_det")
                 </div>
             </div>
         </div>
