--- a/ERP/Core.Erp.Web/Areas/Produccion/Views/Fabricacion/_GridViewPartial_fabricacion_det_ing.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Produccion/Views/Fabricacion/_GridViewPartial_fabricacion_det_ing.cshtml
@@ -2,15 +2,18 @@
 @{
     var grid = Html.DevExpress().GridView(settings =>
     {
-        settings.Name = "GridViewPartial_fabricacion_det";
-        settings.CallbackRouteValues = new { Controller = "Fabricacion", Action = "GridViewPartial_fabricacion_det" };
+        settings.Name = "GridViewPartial_fabricacion_det_ing";
+        settings.CallbackRouteValues = new { Controller = "Fabricacion", Action = "GridViewPartial_fabricacion_det_ing" };
         settings.KeyFieldName = "Secuencia";
         settings.Width = Unit.Percentage(100);
 
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
-        settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "Fabricacion", Action = "EditingAddNew", Area = "Produccion" };
-        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "Fabricacion", Action = "EditingUpdate", Area = "Produccion" };
-        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "Fabricacion", Action = "EditingDelete", Area = "Produccion" };
+        settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "Fabricacion", Action = "EditingAddNewIngreso", Area = "Produccion" };
+        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "Fabricacion", Action = "EditingUpdateIngreso", Area = "Produccion" };
+        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "Fabricacion", Action = "EditingDeleteIngreso", Area = "Produccion" };
 
         settings.CommandColumn.Visible = true;
         settings.CommandColumn.ShowNewButton = true;
@@ -33,10 +36,12 @@
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
         settings.InitNewRow = (s, e) =>
         {
-            e.NewValues["IdCatalogo"] = "";
-            e.NewValues["IdCtaCble"] = "";
-            e.NewValues["Porcentaje"] = 0;
+            e.NewValues["Signo"] = "+";
+            e.NewValues["RealizaMovimiento"] = true;
+            e.NewValues["Costo"] = 0;
+            e.NewValues["Cantidad"] = 1;
         };
+
         settings.Columns.Add(column =>
         {
             column.FieldName = "pr_descripcion";
@@ -55,7 +60,7 @@
             column.SetEditItemTemplateContent(c =>
             {
                 ViewContext.Writer.Write("<div id='ajaxDiv'>");
-                Html.RenderPartial("_CmbProducto_Factura", DataBinder.Eval(c.DataItem, "IdProducto"));
+                Html.RenderPartial("_CmbProducto_Fabricacion", DataBinder.Eval(c.DataItem, "IdProducto"));
                 ViewContext.Writer.Write("</div>");
             });
         });
