--- a/ERP/Core.Erp.Web/Areas/Produccion/Views/Fabricacion/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Produccion/Views/Fabricacion/Nuevo.cshtml
@@ -77,7 +77,7 @@
             </div>
         </div>
 
-            <div class="col-md-6">
+        <div class="col-md-6">
                 <div class="col-md-4">
                     <div class="form-group">
                         <label for="">Desde*</label>
@@ -142,11 +142,17 @@
 
 
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-6">
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="">Producto terminado</label>
-                        @Html.Action("GridViewPartial_fabricacion_det")
+                        @Html.Action("GridViewPartial_fabricacion_det_ing")
+                </div>
+            </div>
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="">Materia prima</label>
+                    @Html.Action("GridViewPartial_fabricacion_det_egr")
                 </div>
             </div>
         </div>
