--- a/ERP/Core.Erp.Web/Areas/Produccion/Views/Fabricacion/_GridViewPartial_fabricacion_det_egr.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Produccion/Views/Fabricacion/_GridViewPartial_fabricacion_det_egr.cshtml
@@ -7,22 +7,7 @@
         settings.KeyFieldName = "Secuencia";
         settings.Width = Unit.Percentage(100);
 
-        //Configuración para que la grilla no muestre texto completo
-        settings.SettingsBehavior.AllowEllipsisInText = true;
-        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
-        settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
-        settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "Fabricacion", Action = "EditingAddNewEgreso", Area = "Produccion" };
-        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "Fabricacion", Action = "EditingUpdateEgreso", Area = "Produccion" };
-        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "Fabricacion", Action = "EditingDeleteEgreso", Area = "Produccion" };
-
-        settings.CommandColumn.Visible = true;
-        settings.CommandColumn.ShowNewButton = true;
-        settings.CommandColumn.ShowEditButton = true;
-        settings.CommandColumn.ShowDeleteButton = true;
-
-        settings.SettingsContextMenu.Enabled = true;
-        settings.SettingsContextMenu.RowMenuItemVisibility.DeleteRow = false;
-        settings.SettingsBehavior.EnableCustomizationWindow = true;
+        settings.CommandColumn.Visible = false;
 
         settings.SettingsPager.Visible = true;
         settings.Settings.ShowGroupPanel = false;
@@ -37,7 +22,7 @@
         settings.InitNewRow = (s, e) =>
         {
             e.NewValues["Signo"] = "-";
-            e.NewValues["RealizaMovimiento"] = false;
+            e.NewValues["RealizaMovimiento"] = true;
             e.NewValues["Costo"] = 0;
             e.NewValues["Cantidad"] = 1;
         };
