--- a/ERP/Core.Erp.Web/Areas/Produccion/Views/Fabricacion/_GridViewPartial_fabricacion_det_ing.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Produccion/Views/Fabricacion/_GridViewPartial_fabricacion_det_ing.cshtml
@@ -15,7 +15,7 @@
         settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "Fabricacion", Action = "EditingUpdateIngreso", Area = "Produccion" };
         settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "Fabricacion", Action = "EditingDeleteIngreso", Area = "Produccion" };
 
-        settings.CommandColumn.Visible = true;
+        settings.CommandColumn.Visible = false;
         settings.CommandColumn.ShowNewButton = true;
         settings.CommandColumn.ShowEditButton = true;
         settings.CommandColumn.ShowDeleteButton = true;
