--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Nuevo.cshtml
@@ -820,12 +820,13 @@
                 } else
                 {
                     $("#link_general").click();
-                    if (data.tp_EsCombo == "S") {
+                    if (data.tp_EsCombo == "S" || data.Aparece_fabricacion == true) {
                         $("#link_composicion").show();
                     }
                     else {
                         $("#link_composicion").hide();
                     }
+
                     if (data.tp_es_lote) {
                         $("#link_lote").show();
                     } else {
