--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/LiquidacionVacaciones/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/LiquidacionVacaciones/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Solicitud de vacaciones";
+    ViewBag.Title = "Liquidacion de vacaciones";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
