--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/Modificar.cshtml
@@ -59,7 +59,10 @@
         </div>
     </div>
 </div>
-
+<div class="box-footer">
+    <button type="submit" class="btn btn-primary">Procesar</button>
+    <a class="btn btn-default" href="@Url.Action("Index","ProcesarRol",new { Area = "RRHH" },null)">Cancelar</a>
+</div>
 
 <div id="Tabs" role="tabpanel">
     <ul class="nav nav-tabs" role="tablist">
@@ -76,7 +79,7 @@
                 <div class="col-md-12">
                     <div class="col-md-12">
                         <div class="form-group">
-                            @Html.Action("GridViewPartial_empleados_sin_percibir_sueldo", new { Area = "RRHH", Controller = "ProcesarRol" })
+                            @Html.Action("GridViewPartial_empleados_sin_percibir_sueldo", new { Area = "RRHH", Controller = "ProcesarRol", IdRol =ViewBag.IdRol})
                         </div>
                     </div>
                 </div>
@@ -98,10 +101,7 @@
     </div>
 </div>
 
-<div class="box-footer">
-    <button type="submit" class="btn btn-primary">Procesar</button>
-    <a class="btn btn-default" href="@Url.Action("Index","ProcesarRol",new { Area = "RRHH" },null)">Cancelar</a>
-</div>
+
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
