--- a/ERP/Core.Erp.Web/Areas/Presupuesto/Views/Presupuesto/_GridViewPartial_Presupuesto.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Presupuesto/Views/Presupuesto/_GridViewPartial_Presupuesto.cshtml
@@ -85,9 +85,10 @@
 
 
         settings.Columns.Add("IdPresupuesto", "Código").Width = Unit.Percentage(10);
-        settings.Columns.Add("IdSucursal", "Sucursal").Width = Unit.Percentage(20);
-        settings.Columns.Add("IdPeriodo", "Periodo").Width = Unit.Percentage(20);
-        settings.Columns.Add("IdGrupo", "Grupo").Width = Unit.Percentage(20);
+        settings.Columns.Add("Su_Descripcion", "Sucursal").Width = Unit.Percentage(15);
+        settings.Columns.Add("FechaInicio", "Fecha Inicio").Width = Unit.Percentage(10);
+        settings.Columns.Add("FechaFin", "Fecha Fin").Width = Unit.Percentage(10);
+        settings.Columns.Add("Descripcion", "Grupo").Width = Unit.Percentage(15);
         settings.Columns.Add("Observacion", "Observación").Width = Unit.Percentage(20);
         settings.Columns.Add(column =>
         {
