--- a/ERP/Core.Erp.Web/Areas/Presupuesto/Views/Presupuesto/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Presupuesto/Views/Presupuesto/Index.cshtml
@@ -6,7 +6,7 @@
     {
         Response.Redirect("~/Account/Login");
     }
-    Layout = "~/Views/Shared/_LayoutConsulta.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
