--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ArchivosActualizacionSueldo/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ArchivosActualizacionSueldo/Nuevo.cshtml
@@ -55,8 +55,7 @@
 </div>
 
 <div class="box-footer">
-    <button type="submit" class="btn btn-primary">Buscar</button>
-    <button type="submit" class="btn btn-primary">Generar archivo</button>
+    <button type="submit" class="btn btn-primary">Descrgar archivo</button>
 </div>
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
