--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ArchivosActualizacionSueldo/_GridViewPartial_archivos_iess.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ArchivosActualizacionSueldo/_GridViewPartial_archivos_iess.cshtml
@@ -22,6 +22,7 @@
         settings.SettingsPager.PageSize = 10;
         settings.SettingsPager.Mode = GridViewPagerMode.ShowPager;
         settings.SettingsPager.AlwaysShowPager = true;
+        settings.Settings.ShowFooter = true;
 
 
         settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
@@ -47,12 +48,13 @@
             if (e.RowType == GridViewRowType.Data && e.VisibleIndex % 2 == 0)
                 e.BrickStyle.BackColor = System.Drawing.Color.FromArgb(0xEE, 0xEE, 0xEE);
         };
-      
+
         settings.Columns.Add("IdEmpleado", "ID").Width = Unit.Percentage(5);
         settings.Columns.Add("pe_nombreCompleto", "Nombres").Width = Unit.Percentage(30);
         settings.Columns.Add("pe_cedulaRuc", "Cédula ").Width = Unit.Percentage(10);
-        settings.Columns.Add("ru_descripcion", "Rubro").Width = Unit.Percentage(10);
-        settings.Columns.Add("Valor", "Valor").Width = Unit.Percentage(20);
+        settings.Columns.Add("ru_descripcion", "Rubro").Width = Unit.Percentage(20);
+        settings.Columns.Add("Valor", "Valor").Width = Unit.Percentage(10);
+        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "Valor");
 
     });
 }
