--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionHoras/_GridViewPartial_importacion_horas.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionHoras/_GridViewPartial_importacion_horas.cshtml
@@ -52,7 +52,7 @@
         //Evento para pintar de rojo las filas anuladas
         settings.HtmlRowPrepared = (s, e) =>
         {
-            if (Convert.ToBoolean(e.GetValue("Estado")) == false)
+            if (Convert.ToBoolean(e.GetValue("EstadoBool")) == false)
             {
                 e.Row.ForeColor = System.Drawing.Color.Red;
             }
@@ -92,8 +92,8 @@
         });
 
         settings.Columns.Add("Descripcion", "Nómina").Width = Unit.Percentage(8);
-        settings.Columns.Add("DescripcionProcesoNomina", "Proceso").Width = Unit.Percentage(15);
-        settings.Columns.Add("Observacion", "Observación").Width = Unit.Percentage(10);
+        settings.Columns.Add("DescripcionProcesoNomina", "Proceso").Width = Unit.Percentage(30);
+        settings.Columns.Add("Observacion", "Observación").Width = Unit.Percentage(60);
         settings.Columns.Add(column =>
         {
             column.FieldName = "EstadoBool";
