--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/Nuevo.cshtml
@@ -65,18 +65,14 @@
 </div>
 <div id="Tabs" role="tabpanel">
     <ul class="nav nav-tabs" role="tablist">
-        <li class="active">
-            <a href="#tab_estadisticas" aria-controls="datos" role="tab" data-toggle="tab">Estadistica</a>
-        </li>
-        <li>
+       
+        <li class=" panel active">
             <a href="#tab_contratos_por_vencer" aria-controls="diario" role="tab" data-toggle="tab">Contratos por vencer</a>
         </li>
     </ul>
     <div class="tab-content" style="padding-top: 20px">
-        <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_estadisticas">
-
-        </div>
-        <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_contratos_por_vencer">
+       
+        <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_contratos_por_vencer">
             <div class="row">
                 <div class="col-md-12">
                     <div class="col-md-12">
