--- a/ERP/Core.Erp.Web/Areas/Produccion/Views/Fabricacion/_CmbProducto_Fabricacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Produccion/Views/Fabricacion/_CmbProducto_Fabricacion.cshtml
@@ -19,7 +19,7 @@
         settings.Properties.Columns.Add("nom_categoria", "Categoria", 15);
         settings.Properties.Columns.Add("nom_presentacion", "Presentación", 15);
         settings.Properties.FilterMinLength = 3;
-        settings.Properties.ClientSideEvents.SelectedIndexChanged = "ArmarMateriaPrima";
+        settings.Properties.ClientSideEvents.ValueChanged = "ArmarMateriaPrima";
 
 
 
