--- a/ERP/Core.Erp.Web/Areas/Presupuesto/Views/Presupuesto/_GridViewPartial_Presupuesto.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Presupuesto/Views/Presupuesto/_GridViewPartial_Presupuesto.cshtml
@@ -86,8 +86,7 @@
 
         settings.Columns.Add("IdPresupuesto", "Código").Width = Unit.Percentage(10);
         settings.Columns.Add("Su_Descripcion", "Sucursal").Width = Unit.Percentage(15);
-        settings.Columns.Add("FechaInicio", "Fecha Inicio").Width = Unit.Percentage(10);
-        settings.Columns.Add("FechaFin", "Fecha Fin").Width = Unit.Percentage(10);
+        settings.Columns.Add("Periodo", "Periodo").Width = Unit.Percentage(20);
         settings.Columns.Add("Descripcion", "Grupo").Width = Unit.Percentage(15);
         settings.Columns.Add("Observacion", "Observación").Width = Unit.Percentage(20);
         settings.Columns.Add(column =>
