--- a/ERP/Core.Erp.Web/Areas/Presupuesto/Views/Presupuesto/_GridViewPartial_PresupuestoDet.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Presupuesto/Views/Presupuesto/_GridViewPartial_PresupuestoDet.cshtml
@@ -22,7 +22,7 @@
         settings.CommandColumn.ShowDeleteButton = true;
 
         settings.SettingsContextMenu.Enabled = true;
-        settings.SettingsContextMenu.RowMenuItemVisibility.NewRow = false;
+        settings.SettingsContextMenu.RowMenuItemVisibility.NewRow = true;
         settings.SettingsBehavior.EnableCustomizationWindow = true;
 
         settings.SettingsPager.Visible = true;
