--- a/ERP/Core.Erp.Web/Areas/Presupuesto/Views/AprobacionPresupuesto/_GridViewPartial_AprobacionPresupuesto.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Presupuesto/Views/AprobacionPresupuesto/_GridViewPartial_AprobacionPresupuesto.cshtml
@@ -78,7 +78,7 @@
 
         settings.Columns.Add("IdPresupuesto", "Código").Width = Unit.Percentage(10);
         settings.Columns.Add("Su_Descripcion", "Sucursal").Width = Unit.Percentage(15);
-        settings.Columns.Add("Periodo", "Periodo").Width = Unit.Percentage(20);
+        settings.Columns.Add("Periodo", "Periodo").Width = Unit.Percentage(15);
         settings.Columns.Add("Descripcion", "Grupo").Width = Unit.Percentage(15);
         settings.Columns.Add("Observacion", "Observación").Width = Unit.Percentage(20);
         settings.Columns.Add(column =>
@@ -91,6 +91,14 @@
 
             });
         });
+        //settings.Columns.Add(column =>
+        //{
+        //    column.SetDataItemTemplateContent(c =>
+        //    {
+        //        ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("CXP_004", "PresupuestoReportes", new { Area = "Reportes", IdEmpresa = DataBinder.Eval(c.DataItem, "IdEmpresa").ToString(), IdPresupuesto = DataBinder.Eval(c.DataItem, "IdPresupuesto").ToString() }, Request.Url.Scheme) + "');\"></span>");
+        //    });
+        //    column.Width = Unit.Percentage(5);
+        //});
     });
 }
 @grid.Bind(Model).GetHtml()
